# proc-viz

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  run_tests.sh
.codex/: AGENTS.md  hooks.json
.github/workflows/: build-release.yml
.wolf/: STATUS.md  _scan-state.json  anatomy-index.json  anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
app/: __init__.py  db_accessor.py  main_window.py
app/dialogs/: __init__.py  connection_dialog.py  connection_manager_dialog.py
app/drivers/: __init__.py  connection_manager.py  database_driver.py  driver_factory.py  initialization.py  odbc_manager.py  sqlserver_driver.py
app/models/: __init__.py  connection_profile.py
app/storage/: __init__.py  profile_manager.py  settings.py
app/themes/: theme_definitions.py  theme_manager.py
app/widgets/: __init__.py  database_explorer.py  loading_spinner.py  parameters_widget.py  sql_highlighter.py  zoomable_text_edit.py
docs/: CONNECTION_DIALOG.md  CONNECTION_PROFILES.md  DEBUGGING.md  ODBC_SETUP.md
packaging/: procedures-visualizer.desktop
tests/: test_connection_dialog.py  test_connection_profile.py  test_database_explorer.py  test_db_accessor.py  test_main.py  test_odbc_manager.py  test_profile_manager.py
tests/integration/: __init__.py  conftest.py  test_sqlserver.py
