[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proc-viz"
version = "0.1.0"
description = "Process visualization application"
authors = [{name = "Developer", email = "otaviolarrosa@outlook.com"}]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.7.0",
    "pyodbc>=5.1.0",
    "keyring>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "PyInstaller>=6.5.0",
]

[project.scripts]
proc-viz = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
